--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.15'
         classpath "org.openjfx:javafx-plugin:0.0.9"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
@@ -44,6 +45,7 @@ subprojects {
         dependencies {
             classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
             classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.15'
+            classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         }
     }
 
@@ -51,6 +53,7 @@ subprojects {
     apply plugin: "java"
     apply plugin: 'application'
     apply plugin: 'com.google.protobuf'
+    apply plugin: 'kotlinx-serialization'
 
     sourceCompatibility = 1.8
     compileKotlin { kotlinOptions.jvmTarget = "1.8" }
@@ -77,6 +80,7 @@ subprojects {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
         implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.4.3'
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
 
         //implementation 'io.grpc:grpc-netty:1.36.0'
         implementation 'io.grpc:grpc-netty-shaded:1.36.0'
