User can query server about locations

--- a/HDLT-User/build.gradle
+++ b/HDLT-User/build.gradle
@@ -5,3 +5,7 @@ application.mainClass = "sec.hdlt.user.MainKt"
 dependencies {
     implementation project(":protos")
 }
+
+run {
+    standardInput = System.in
+}
